# hybserv2

./: .cvsignore  .gitignore  .travis.yml  ChangeLog  Dockerfile  INSTALL  KNOWNBUGS  Makefile.in  README  README.md  RELEASENOTES  RELEASENOTES-1.7.3  RELEASENOTES-1.8.0  TODO  UPGRADE  aclocal.m4  configure  configure.in  install.fast  serno.h
autoconf/: acconfig.h  configure.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
compat/: Makefile.in  getaddrinfo.c  inet_ntoa.c  inet_ntop.c  inet_pton.c  strdup.c  strerror.c  strlcat.c  strlcpy.c
contrib/: Dockerfile  README  hybrid_services.c  m_forcenick.c  m_svsnick.c  m_unkline.c
doc/: API.pre  CODING-STYLE  README-FLAGS  README-HOARD  README-PTHREADS  README-SFIO  TCM-LINKING  cleandb.8  cleandb.8.sgml  hybserv.8  hybserv.8.sgml  showchans.8  showchans.8.sgml  shownicks.8  shownicks.8.sgml
doc/ReleaseNotes/: RELEASENOTES-1.4.0  RELEASENOTES-1.4.2  RELEASENOTES-1.4.5  RELEASENOTES-1.4.6  RELEASENOTES-1.5.0  RELEASENOTES-1.6.0  RELEASENOTES-1.6.1  RELEASENOTES-1.7  RELEASENOTES-1.7.2  RELEASENOTES-1.7.3  RELEASENOTES-1.9.0
help/chanserv/: clear  clearnoexp  cycle  delme  drop  forbid  forget  halfop  identify  index  info  invite  list  modes  noexpire  op  register  resetlevels  setpass  status  unban  unforbid  voice
help/chanserv/access/: add  del  index  list
help/chanserv/akick/: add  del  index  list
help/chanserv/level/: index  list  reset  set
help/chanserv/set/: comment  email  entrymsg  expirebans  forget  founder  guard  index  mlock  password  private  pubcommands  restricted  secure  secureops  splitops  successor  topic  topiclock  url  verbose
help/global/: gchannote  gcmemo  gmemo  gnote  index  motd
help/helpserv/: chanserv  global  index  memoserv  nickserv  operserv  seenserv  statserv
help/memoserv/: del  forward  index  list  purge  read  reply  send  undel
help/nickserv/: clearnoexp  collide  drop  droplink  flag  forbid  ghost  identify  index  info  link  list  noexpire  recover  recoverpass  register  release  setpass  showlink  unforbid  unlink
help/nickserv/access/: add  del  index  list
help/nickserv/set/: automask  email  gsm  hide  index  kill  master  memos  neverop  noadd  noexpire  nolink  notify  oper  password  phone  phrase  private  privmsg  secure  signon  uin  unsecure  url
help/operserv/: channel  clones  die  dump  fuckover  gline  help  htm  hub  identify  ignore  index  join  jump  jupe  kill  killchan  killhost  kline  logout  motd  off  omode  on  part  rehash  reload  restart  save  secure  set  stats  status  trace  umode  ungline  unjupe
help/operserv/dcc/: boot  index  link  motd  quit  unlink  who
help/seenserv/: index  join  part  seen  seennick  seenstat  unseen
help/statserv/: clearstats  domain  greplog  host  index  refresh  server  showadmins  showopers  showstats  split  stats
include/: Strn.h  alloc.h  channel.h  chanserv.h  client.h  conf.h  config.h.in  data.h  dcc.h  defs.h.in  err.h  flood.h  gline.h  global.h  hash.h  helpserv.h  hybdefs.h  init.h  jupe.h  log.h  match.h  memoserv.h  misc.h  motd.h  mystring.h  nickserv.h  operserv.h  seenserv.h  serno.h  server.h  settings.h  show.h  sock.h  sprintf_irc.h  statserv.h  stdinc.h  timer.h  timestr.h
lib/: getnameinfo.c  strtol.c
libString/: Makefile.in  Snprintf.c  Strncpy.c  version.c
source/: .cvsignore  .depend  Makefile.in  alloc.c  channel.c  chanserv.c  client.c  conf.c  crypt.c  data.c  dcc.c  flood.c  gline.c  global.c  hash.c  helpserv.c  hybserv.c  init.c  jupe.c  log.c  match.c  memoserv.c  misc.c  motd.c  mystring.c  nickserv.c  operserv.c  seenserv.c  server.c  settings.c  show.c  sock.c  sprintf_irc.c  statserv.c  timer.c  timestr.c  version.c
sql/: input_table.c  sql-design  template.c
src/: .depend  Makefile.in  alloc.c  channel.c  chanserv.c  client.c  conf.c  crypt.c  data.c  dcc.c  flood.c  gline.c  global.c  hash.c  helpserv.c  hybserv.c  inet_ntop.c  init.c  jupe.c  log.c  match.c  memoserv.c  misc.c  motd.c  mystring.c  nickserv.c  operserv.c  seenserv.c  server.c  settings.c  show.c  sock.c  sprintf_irc.c  statserv.c  timer.c  timestr.c  version.c
tools/: Makefile.in  doencrypt.c  encryptconf.c  encryptdb.c  mkpasswd.c
